--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" th:href="@{/index}">首页</a>
                         </li>
                         <li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
-                            <a class="nav-link position-relative" th:href="@{/letter}">消息<span
+                            <a class="nav-link position-relative" th:href="@{/letter/list}">消息<span
                                     class="badge badge-danger">12</span></a>
                         </li>
                         <li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
@@ -144,7 +144,9 @@
                                 th:text="${#dates.format(map.post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15
                             15:32:18</b>
                             <ul class="d-inline float-right">
-                                <li class="d-inline ml-2">赞 11</li>
+                                <li class="d-inline ml-2">赞
+                                    <span th:text="${map.likeCount}">11</span>
+                                </li>
                                 <li class="d-inline ml-2">|</li>
                                 <li class="d-inline ml-2">回帖 <span th:text="${map.post.commentCount}">7</span></li>
                             </ul>
@@ -158,7 +160,7 @@
                     <li class="page-item"><a class="page-link" th:href="@{${page.path}(currentPage=1)}">首页</a></li>
                     <li th:class="|page-item ${page.currentPage == 1?'disabled':''}|">
                         <a class="page-link"
-                           th:href="@{${page.path} (currentPage= ${page.currentPage-1})}">上一页</a>
+                           th:href="@{${page.path} (currentPage=${page.currentPage-1})}">上一页</a>
                     </li>
                     <li th:class="|page-item ${i == page.currentPage?'active':''}|"
                         th:each="i:${#numbers.sequence(page.from,page.to)}">
