--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -69,7 +69,7 @@
 						<label class="col-sm-2 col-form-label text-right">选择头像:</label>
 						<div class="col-sm-10">
 							<div class="custom-file">
-								<input type="file" th:class="|custom-file-input ${error==null}?'is-invalid':''|" name="headerImage" id="head-image" lang="es" required="">
+								<input type="file" th:class="|custom-file-input ${error!=null}?'is-invalid':''|" name="headerImage" id="head-image" lang="es" required="" accept="image/gif,image/jpeg,image/jpg,image/png,image/svg">
 								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
 								<div class="invalid-feedback" th:text="${error}">
 									该账号不存在!
@@ -86,12 +86,12 @@
 				</form>
 				<!-- 修改密码 -->
 				<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-				<form class="mt-5" method="post" th:action="@{/user/password}">
+				<form class="mt-5" method="post" th:action="@{/user/updatePassword}">
 					<div class="form-group row mt-4">
 						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
 						<div class="col-sm-10">
-							<input type="password" th:class="|form-control ${oldPasswordLengthMsg!=null?'is-invalid':''}|" th:value="${oldPasswordLengthMsg!=null?'':param.oldPassword}" name="oldPassword" id="old-password" placeholder="请输入原始密码!" required>
-							<div class="invalid-feedback" th:text="${oldPasswordLengthMsg}">
+							<input type="password" th:class="|form-control ${oldMsg!=null?'is-invalid':''}|" th:value="${oldMsg!=null?'':param.oldPassword}" name="oldPassword" id="old-password" placeholder="请输入原始密码!" required>
+							<div class="invalid-feedback" th:text="${oldMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -99,8 +99,8 @@
 					<div class="form-group row mt-4">
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
-							<input type="password" th:class="|form-control ${newPasswordLengthMsg!=null?'is-invalid':''}|" th:value="${newPasswordLengthMsg!=null?'':param.newPassword}" name="newPassword" id="new-password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback" th:text="${newPasswordLengthMsg}">
+							<input type="password" th:class="|form-control ${newMsg!=null?'is-invalid':''}|" th:value="${newMsg!=null?'':param.newPassword}" name="newPassword" id="new-password" placeholder="请输入新的密码!" required>
+							<div class="invalid-feedback" th:text="${newMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -108,7 +108,7 @@
 					<div class="form-group row mt-4">
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
-							<input type="password" th:class="|form-control ${unlikeMsg!=null?'is-invalid':''}|" name="confirmPassword" th:value="${unlikeMsg!=null?'':param.confirmPassword}" id="confirm-password" placeholder="再次输入新密码!" required>
+							<input type="password" th:class="form-control" name="confirmPassword" th:value="${param.newPassword}" id="confirm-password" placeholder="再次输入新密码!" required>
 							<div class="invalid-feedback" th:text="${unlikeMsg}">
 								两次输入的密码不一致!
 							</div>								
